menu icon mobile fixed; aktionen datum in oswald; freund list abstand; archive modals fixed; aktion kacheln auf home fixed; slider interval fix

--- a/app/assets/stylesheets/event_modal.scss
+++ b/app/assets/stylesheets/event_modal.scss
@@ -148,7 +148,6 @@
       line-height: 1.47;
       margin: 0 0 2px;
       text-align: left;
-      float: left;
 
       @include media-breakpoint-down(sm) {
         font-size: 16px;
