--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -112,21 +112,23 @@
 
         &.date {
           color: $black;
-          font-family: 'Montserrat', sans-serif;
+          // font-family: 'Montserrat', sans-serif;
+          // font-size: 30px;
+          font-family: $oswald;
           font-size: 30px;
           font-stretch: normal;
           font-style: normal;
-          font-weight: 600;
+          font-weight: 700;
           height: 37px;
-          letter-spacing: 1.4px;
-          line-height: 1;
+          // letter-spacing: 1.4px;
+          line-height: 1.2;
           padding: 10px 13px 1px 16px;
           text-align: left;
 
           @media (min-width: $mobile-breakpoint-width) {
             font-size: 42px;
             height: 52px;
-            letter-spacing: 1.9px;
+            // letter-spacing: 1.9px;
             padding: 19px 54px 0 24px;
             width: 377px;
 
@@ -134,6 +136,17 @@
               display: block;
             }
           }
+
+          @media (min-width: $mobile-breakpoint-width) {
+            // font-size: 3.7vw;
+          }
+
+          @media (min-width: $max-viewport-width) {
+            font-size: 45px;
+          }
+
+
+
         }
 
         &.details {
@@ -294,27 +307,37 @@
           }
 
           a {
-            bottom: 0;
-            left: 0;
-            position: absolute;
-            right: 0;
-            top: 0;
 
             &.logo {
               background-color: $white;
               background-position: 50% 50%;
               background-repeat: no-repeat;
               background-size: 66%;
+              bottom: 0;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
             }
 
             &.picture {
               background-color: $white;
               background-position: 50% 50%;
               background-size: cover;
+              bottom: 0;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
             }
 
             &.blank {
               background-color: $red;
+              bottom: 0;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
             }
           }
 
