--- a/app/assets/stylesheets/styleguide.scss
+++ b/app/assets/stylesheets/styleguide.scss
@@ -63,7 +63,7 @@
   text-align: left;
 
   @media (min-width: $mobile-breakpoint-width) {
-    font-size: 2.7vw;
+    font-size: 3.7vw;
   }
 
   @media (min-width: $max-viewport-width) {
@@ -328,7 +328,7 @@
   font-style: normal;
   font-weight: 300;
   letter-spacing: .4px;
-  margin-right: 10px;
+  margin-right: 4px;
   text-align: left;
 }
 
