--- a/app/assets/stylesheets/user_modal.scss
+++ b/app/assets/stylesheets/user_modal.scss
@@ -67,13 +67,15 @@
   }
 }
 
-.fa-remove:before,
-.fa-close:before,
-.fa-times:before {
-    content: "";
-    width: 30px;
-    height: 30px;
-    display: block;
-    background-repeat: no-repeat;
-    background-position: center center;
+.modal{
+  .fa-remove:before,
+  .fa-close:before,
+  .fa-times:before {
+      content: "";
+      width: 30px;
+      height: 30px;
+      display: block;
+      background-repeat: no-repeat;
+      background-position: center center;
+  }
 }
